force-app/main/default/objects/Material_Engagement__c/Material_Engagement__c.object-meta.xml
<CustomObject>
    <label>Material Engagement</label>
    <nameField>
        <displayFormat>ME-{000000}</displayFormat>
        <label>Material Engagement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Engagements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>