force-app/main/default/objects/Material_Engagement__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material</label>
    <referenceTo>Material__c</referenceTo>
    <relationshipLabel>Materials Engagement</relationshipLabel>
    <relationshipName>Materials_Engagement</relationshipName>
    <type>Lookup</type>
</CustomField>