force-app/main/default/objects/Material_Engagement__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Labours/Materials Engagement</relationshipLabel>
    <relationshipName>Project_Engagement</relationshipName>
    <type>Lookup</type>
</CustomField>