force-app/main/default/objects/Material_Engagement__c/fields/Project_Version__c.field-meta.xml
<CustomField>
    <fullName>Project_Version__c</fullName>
    <label>Project Version</label>
    <referenceTo>Project_Version__c</referenceTo>
    <relationshipLabel>Material Engagements</relationshipLabel>
    <relationshipName>Material_Engagements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>