force-app/main/default/objects/Material_Engagement__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Labours Engagement</relationshipLabel>
    <relationshipName>Labours_Engagement</relationshipName>
    <type>Lookup</type>
</CustomField>